tests/NormalTests/paczka1/fuzzy1/65320063.err
Error in line 2: 8z1 S903 5,7
Error in line 9: gnt6IKw A89 -1,7
Error in line 18: A89 S91D 201,3
Error in line 5: gnt6IKw A89 27,5
Error in line 16: 12kOutE4Dt S914 253,0
Error in line 28: remRo1Zd A89 26,5
Error in line 32: gnt6IKw S903 11,7
